# Homework06

./: .travis.yml  CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  DESCRIPTION  README.md  appveyor.yml
formatter_ex_lib/: CMakeLists.txt  formatter_ex.cpp  formatter_ex.h
formatter_lib/: CMakeLists.txt  formatter.cpp  formatter.h
formatter_lib/_builds/: CMakeCache.txt  Makefile  cmake_install.cmake
hello_world_application/: CMakeLists.txt  hello_world.cpp
solver_application/: CMakeLists.txt  equation.cpp
solver_lib/: solver.cpp  solver.h
